# composite-compliance-tracker

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DECISIONS.md  Dockerfile  PLAN.md  README.md  SPEC.md  WHITEBOARD-DRILL.md  docker-compose.yml  entrypoint.sh  pyproject.toml  render.yaml
.github/workflows/: ci.yml
config/: settings.py
tests/: test_assist.py  test_compliance.py  test_cure.py  test_cure_run.py  test_deploy_config.py  test_healthz.py  test_material_lot.py  test_outtime.py  test_readiness.py  test_seed.py  test_trace.py  test_views.py
tracker/: urls.py  views.py
tracker/assist/: client.py  prompts.py
tracker/compliance/: admin.py  apps.py  models.py
tracker/compliance/migrations/: 0001_initial.py
tracker/cure/: admin.py  apps.py  charts.py  models.py  window.py
tracker/cure/migrations/: 0001_initial.py
tracker/data/: apps.py  criteria_repr.py  seed.py
tracker/data/management/commands/: seed_shop.py
tracker/materials/: admin.py  apps.py  models.py  outtime.py
tracker/materials/migrations/: 0001_initial.py  0002_materiallot_is_active.py
tracker/readiness/: engine.py  evaluate.py  report.py
tracker/templates/tracker/: _assist_draft.html  base.html  criterion_detail.html  cure_detail.html  dashboard.html  home.html  lot_detail.html  trace_index.html
tracker/templatetags/: readiness_extras.py
tracker/trace/: admin.py  apps.py  models.py
tracker/trace/migrations/: 0001_initial.py
