[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "composite-compliance-tracker"
version = "0.1.0"
description = "NADCAP AC7118 (Composites) audit-readiness + process-data tracker (illustrative, synthetic data)"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "django>=5.1,<6.0",
    "psycopg[binary]>=3.2",
    "dj-database-url>=2.2",
    "gunicorn>=23.0",
    "whitenoise>=6.7",
    "plotly>=5.24",
]

# Optional, gated Claude assist — advisory only, never decides compliance or
# computes a limit. The app is fully usable without this installed.
[project.optional-dependencies]
assist = ["anthropic>=0.40"]
dev = [
    "pytest>=8.3",
    "pytest-django>=4.9",
    "ruff>=0.7",
]

[tool.setuptools]
packages = ["config", "tracker"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "DJ"]

[tool.ruff.lint.per-file-ignores]
# The criteria catalog is a readable one-row-per-criterion data table.
"tracker/data/criteria_repr.py" = ["E501"]
